--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -9,37 +9,43 @@ body {
   background-size: cover;
   background-attachment: fixed;
 }
+header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: auto;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 5px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
 img {
   height: 200px;
   width: 150px;
 }
-h1 {
-  color: blue;
+h2 {
+  color: white;
   text-shadow: 0 0 1 px black;
   text-align: center;
 }
-header {
-  font-size: 2rem;
-}
-ul {
-  display: flex;
-  text-align: center;
-  justify-content: space-around;
-  list-style: none;
-}
-a {
+
+.home {
+  padding: 0;
   text-decoration: none;
-  color: black;
+  color: white;
   text-shadow: 0 0 1px black;
 }
+
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 30px;
-  margin-top: 30px;
 }
+
 form div {
   display: flex;
   flex-direction: column;
@@ -58,6 +64,7 @@ input {
   font-size: 1.2rem;
   padding: 1%;
 }
+
 .container {
   margin: 20px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -95,18 +102,23 @@ input {
 
 #containerForm {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
-#div-list-msgs {
-  margin: 20px;
+#input-msg {
+  margin: 10px 0;
+}
+#div-list-msgs,
+#div-list-msgs2 {
+  margin-left: 2.5%;
   padding: 1%;
-  width: 80%;
-  height: 400px;
+  width: 100%;
+  height: 30vh;
   background-color: white;
   border-radius: 50px;
   border: 2px solid black;
+  overflow-y: scroll;
 }
 #mensajeForm {
   font-style: italic;
@@ -115,6 +127,9 @@ input {
 #emailForm {
   color: blue;
 }
-#fecha{
-    color: brown;
+#fecha {
+  color: brown;
+}
+#containerChats {
+  width: 50%;
 }
