--- a/src/views/layouts/index.hbs
+++ b/src/views/layouts/index.hbs
@@ -6,6 +6,7 @@
     <link rel='stylesheet' type='text/css' href='./styles.css' />
     <script src='https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js'></script>
     <script src='/socket.io/socket.io.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/normalizr@3.6.1/dist/normalizr.browser.min.js"></script>
     <script defer='defer' src='./index.js'></script>
     <link
       href='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css'
