--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,6 +1,5 @@
-<ul>
-  <li>
-    <a href="/">Home</a>
-    <a href="/productos">Productos</a>
-  </li>
-</ul>
+<header>
+  <h2>Coderhouse</h2>
+  <a href="/" class="home">Home</a>
+  <a href="/productos" class="home">Productos</a>
+</header>
