--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <header>
   <h2>Coderhouse</h2>
   <a href="/" class="home">Home</a>
-  <a href="/productos" class="home">Productos</a>
+  <a href="/api/productos-test" class="home">Productos</a>
 </header>
