--- a/src/public/styles.css
+++ b/src/public/styles.css
@@ -71,16 +71,22 @@ input {
   border-radius: 50px;
   display: flex;
   flex-direction: column;
-  font-size: 1.2rem;
+  justify-content: space-between;
+  font-size: 1.1rem;
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding: 1%;
 }
 .lista {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  align-items: center;
+  text-align: center;
   font-size: 1.4rem;
-  padding: 20px 0;
+  margin: 1%;
 }
 .listaProductos {
   padding: 20px;
@@ -105,6 +111,15 @@ input {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+}
+#containerFaker {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(1, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  align-items: center;
+  text-align: center;
 }
 #input-msg {
   margin: 10px 0;
